--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-asgiref
-Django>4.2,<4.3
-sqlparse
-tzdata
+asgiref==3.7.2
+Django==4.2.4
+django-extensions==3.2.3
+django-robots==5.0
+Pillow==10.0.0
+sqlparse==0.4.4
+tzdata==2023.3
