--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-simple-captcha==0.5.18
 django-summernote==0.8.20.0
 django-taggit==4.0.0
 idna==3.4
+mysqlclient==2.2.0
 Pillow==10.0.0
 requests==2.31.0
 six==1.16.0
